# linsolver

./: CMakeLists.txt  README.md  linEquation.cpp  linEquation.hpp  main.cpp
.cache/clangd/index/: Mat.hpp.E353FC77A202B768.idx  linEquation.cpp.E5F33DCCB27298E8.idx  linEquation.hpp.C174B4376A5648B6.idx  main.cpp.7814A0B24B636617.idx
dataStructure/: Mat.hpp
